--- a/style.css
+++ b/style.css
@@ -187,3 +187,46 @@ input[type=number]:focus{
 .four{
     background-image: url("images/image\ \(3\).png");
 }
+.update{
+    padding: 80px 0px;   
+}
+.up-text{
+    text-align: center;
+}
+.update h1{
+    font-size: 40px;
+    text-transform: capitalize;
+}
+.update p{
+    font-size: 18px;
+    text-transform: capitalize;
+    font-weight: 500;
+    line-height: 28px;
+    margin-top: 20px;
+    color: #707070;
+    margin-bottom: 60px;
+}
+.mail{
+    width: 50%;
+    margin: 0 auto;
+    padding: 70px 0px;
+    background-color: #FFF4D6;
+}
+input[type="text"], textarea{
+    background-color: #D9D9D9;
+}
+input[type="text"]:focus{
+    outline: none;
+}
+.mail input{
+    border: 1px solid #D9D9D9;
+    margin-left: 310px;
+    padding: 11px 40px;
+}
+.mail button{
+    padding: 10px 15px;
+    margin-left: -4px;
+    border: none;
+    background-color: #FF5959;
+    color: #ffff;
+}
